more translation-related stuff fix spacing for add-project on projects page

--- a/resources/public/css/components.css
+++ b/resources/public/css/components.css
@@ -269,6 +269,10 @@ and (orientation: landscape) {
     background-color: white;
 }
 
+.button.new-project > h1 {
+    margin-bottom: var(--d-3);
+}
+
 .button.project {
     background-color: var(--mint-primary);
     justify-content: space-between;
